Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39883

Quicktest browser crashes when closing JavaScript Dialog

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0
    • 5.4.0
    • WebEngine
    • Windows 8, Visual Studio Express 2012 Express, 32 Bit
    • dc4c7659ec845ab006515ccc3dbe4c4e6005dafa

      Open a page that displays an alert box through JavaScript (e.g. http://www.w3schools.com/js/tryit.asp?filename=tryjs_alert) and dismiss the alert box.

      This will crash QtWebEngine when JavaScriptDialogControllerPrivate::dialogFinished in javascript_dialog_controller.cpp runs the callback.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mibrunin Michael Bruning
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes