Prevent premature deletion of JavaScript alert dialog object.

This fixes a crash on Windows when dismissing a JavaScript dialog.
It was caused by the JavaScriptDialogController object deleting
itself and its private object from a method call and subsequently
trying to run the JavaScript dialog callback.

Task-number: QTBUG-39883
Change-Id: I74300c53943ec7ebc492362ef7d75d83aa1f8051
Reviewed-by: Pierre Rossi <pierre.rossi@gmail.com>