src/core/javascript_dialog_controller.cpp
@@ -47,8 +47,9 @@
 
 void JavaScriptDialogControllerPrivate::dialogFinished(bool accepted, const base::string16 &promptValue)
 {
-    // Clear the queue first as this could result in the engine asking us to run another dialog.
-    JavaScriptDialogManagerQt::GetInstance()->removeDialogForContents(contents);
+    // Clear the queue first as this could result in the engine asking us to run another dialog,
+    // but hold a shared pointer so the dialog does not get deleted prematurely when running in-process.
+    QSharedPointer<JavaScriptDialogController> dialog = JavaScriptDialogManagerQt::GetInstance()->takeDialogForContents(contents);
 
     callback.Run(accepted, promptValue);
 }
